# IntelligentAttendanceSolution

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Makefile  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  nginx.template  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pr.yml
IAS/: manage.py
IAS/core_apps/attendance/: apps.py  filters.py  models.py  resources.py
IAS/core_apps/attendance/migrations/: 0001_initial.py  0002_auto_20250209_2316.py  0003_auto_20250226_1150.py  0004_attendance_academic_class_section.py  0005_alter_attendance_a_status.py
IAS/core_apps/common/: apps.py  decorators.py  models.py  urls.py  views.py
IAS/core_apps/common/utils/: datetime_utils.py  face_detection_utils.py  image_utils.py
IAS/core_apps/institutes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
IAS/core_apps/institutes/migrations/: 0001_initial.py  0002_alter_institute_address_and_more.py  0003_department.py  0004_alter_institute_phone_number.py  0005_designation.py  0006_staff.py  0007_delete_staff.py  (+5 more)
IAS/core_apps/staffs/: apps.py  models.py  urls.py  views.py
IAS/core_apps/students/: admin.py  apps.py  models.py  urls.py  views.py
IAS/core_apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
IAS/ias/: asgi.py  general.py  settings.py  urls.py  wsgi.py
IAS/ias/template/: .env_template
IAS/scripts/: train_face_recognization_model.py
IAS/utils/: general.py  middleware.py
scripts/: entrypoint.sh
(+63 files in other folders)
